# HarmonyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Harmony.sln  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/data/: HyEditor.qrc  embuild.bat  logo.afphoto
Editor/data/_projGen/: .gitattributes  .gitignore  CMakeLists.txt
Editor/data/icons16x16/: layout-spacer.png~  layout-vertical.png~
Editor/data/styles/: Decemberween.xml
Editor/docs/: index.md
Editor/include/freetype-gl/: freetype-gl.h
Editor/src/: HyEditor.rc  MainWindow.cpp  MainWindow.h  MainWindow.ui  Themes.h  VersionPatcher.cpp  VersionPatcher.h  main.cpp
Editor/src/Assets/: AssetMimeData.cpp  AssetMimeData.h  BanksModel.cpp  BanksModel.h  IAssetItemData.cpp  IAssetItemData.h  IImportThread.cpp  IImportThread.h  IManager.ui  IManagerDraw.cpp  IManagerDraw.h  IManagerModel.cpp  IManagerModel.h  IRepackThread.cpp  IRepackThread.h  ManagerWidget.cpp  ManagerWidget.h  ManagerWidget.ui
Editor/src/Atlas/: AtlasDraw.cpp  AtlasDraw.h  AtlasFrame.cpp  AtlasFrame.h  AtlasModel.cpp  AtlasModel.h  AtlasRepackThread.cpp  AtlasRepackThread.h  AtlasWidget.cpp  AtlasWidget.h
Editor/src/Audio/: AudioAsset.cpp  AudioAsset.h  AudioDraw.cpp  AudioManagerModel.cpp  AudioManagerModel.h  AudioModel.cpp  AudioModel.h  AudioPlayListModel.cpp  AudioPlayListModel.h  AudioRepackThread.cpp  AudioRepackThread.h  AudioWidget.cpp  AudioWidget.h  AudioWidget.ui
Editor/src/Dialogs/: DlgAssetProperties.cpp  DlgAssetProperties.h  DlgAssetProperties.ui  DlgAtlasGroupSettings.cpp  DlgAtlasGroupSettings.h  DlgAtlasGroupSettings.ui  DlgColorPicker.h  DlgImportTileSheet.cpp  DlgImportTileSheet.h  DlgImportTileSheet.ui  DlgInputName.cpp  DlgInputName.h  DlgInputName.ui  DlgInputNumber.cpp  DlgInputNumber.h  DlgInputNumber.ui  DlgNewBuild.cpp  DlgNewBuild.h  DlgNewBuild.ui  DlgNewItem.cpp  DlgNewItem.h  DlgNewPackage.cpp  DlgNewPackage.h  DlgNewPackage.ui  DlgNewProject.cpp  DlgNewProject.h  DlgNewProject.ui  DlgProjectSettings.cpp  DlgProjectSettings.h  DlgProjectSettings.ui  DlgSetEngineLocation.cpp  DlgSetEngineLocation.ui  DlgSetSpineAnims.cpp  DlgSetSpineAnims.h  DlgSetSpineAnims.ui  DlgSetUiPanel.cpp  DlgSetUiPanel.h  DlgSetUiPanel.ui  DlgSnappingSettings.cpp  DlgSnappingSettings.h  (+7 more)
Editor/src/Entity/: EntityDraw.cpp  EntityModel.cpp  EntityModel.h  EntityWidget.cpp  EntityWidget.ui
Editor/src/Explorer/: DlgNewProject.cpp  DlgNewProject.h  DlgNewProject.ui  ExplorerItemData.cpp  ExplorerItemData.h  ExplorerModel.cpp  ExplorerModel.h  ExplorerWidget.cpp  ExplorerWidget.h  ExplorerWidget.ui
Editor/src/Gfx/: CommonGfxView.cpp  GfxGrabPointModel.cpp  GfxGrabPointModel.h  GfxGrabPointView.cpp  GfxGrabPointView.h  GfxMarqueeCtrl.cpp  GfxMarqueeCtrl.h  GfxTextModel.cpp  GfxTextModel.h  GfxTransformCtrl.cpp  GfxTransformCtrl.h
Editor/src/Gltf/: GltfModel.cpp  GltfModel.h
Editor/src/Harmony/: Harmony.cpp  Harmony.h  HarmonyConnection.cpp  HarmonyRulerGfxView.cpp  HarmonyRulerGfxView.h  HarmonyWidget.cpp  HarmonyWidget.h  HarmonyWidget.ui
Editor/src/Items/: IDraw.cpp  IDraw.h  IDrawEx.cpp  IDrawEx.h  IDrawExItem.cpp  IDrawExItem.h  IModel.cpp  IModel.h  IWidget.cpp  IWidget.h  IWidget.ui
Editor/src/Prefab/: PrefabModel.cpp  PrefabModel.h  PrefabWidget.h
Editor/src/Primitive/: PrimitiveModel.cpp  PrimitiveModel.h
Editor/src/Project/: Project.cpp  Project.h  ProjectDraw.cpp  ProjectItemData.cpp  ProjectItemData.h  ProjectItemMimeData.cpp  ProjectItemMimeData.h
Editor/src/Shared/: Global.cpp  Global.h  GlobalUndoCmds.h  GlobalWidgetMappers.h  IDraw.cpp  IMimeData.cpp  IMimeData.h  IModel.cpp  ShapeCtrl.cpp  ShapeCtrl.h  TransformCtrl.cpp  TransformCtrl.h
Editor/src/Sprite/: SpriteDraw.cpp  SpriteDraw.h  SpriteModels.cpp  SpriteModels.h  SpriteTableView.h  SpriteWidget.cpp  SpriteWidget.h  SpriteWidget.ui
Editor/src/Text/: TextDraw.cpp  TextModel.cpp  TextModel.h  TextUndoCmds.h  TextWidget.h  TextWidget.ui
Editor/src/Widget/: WgtAudioCategory.cpp  WgtAudioCategory.h  WgtAudioCategory.ui  WgtAudioGroup.cpp  WgtAudioGroup.h  WgtAudioGroup.ui  WgtCodeEditor.cpp  WgtCodeEditor.h  WgtCodeEditor.ui  WgtHarmony.cpp  WgtHarmony.h  WgtMakeRelDir.cpp  WgtMakeRelDir.h  WgtMakeRelDir.ui  WgtShapeData.cpp  WgtShapeData.h  WgtShapeData.ui  WgtSpineAnims.cpp  WgtSpineAnims.h  WgtSpineAnims.ui  WgtSrcDepGrp.cpp  WgtSrcDepGrp.h  WgtSrcDepGrp.ui  WgtSrcDependency.cpp  WgtSrcDependency.h  WgtSrcDependency.ui  WgtVectorSpinBox.cpp  WgtVectorSpinBox.h  WgtVectorSpinBox.ui  WidgetColor.cpp  WidgetGradientEditor.h  WidgetLiveVarManager.ui  WidgetOutputLog.h  WidgetRangedSlider.cpp  WidgetRangedSlider.h  WidgetVectorSpinBox.cpp  WidgetVectorSpinBox.h  WidgetVectorSpinBox.ui
Engine/: CMakeLists.txt
Engine/extras/HyFMOD/: HyAudio_FMOD.cpp  HyAudio_FMOD.h  HyFMOD.vcxproj  dllmain.cpp
Engine/extras/ICU/: README.txt
Engine/extras/Spine/: README.txt
Engine/extras/SpineRuntime/: README.txt
Engine/include/: HyEngine.h
Engine/include/Afx/: HyInteropAfx.h  HyStdAfx.h
Engine/include/Assets/: HyAssets.h
Engine/include/Audio/: HyAudioBank.h  HyAudioCore.h  HySoundAsset.h  HySoundBuffers.h  IHyAudioCore.h
Engine/include/Diagnostics/: HyDiagnostics.h  HyProfiler.h
Engine/include/Gui/: HyGui.h  IHyGuiBase.h
Engine/include/Harmony/: HyEngine.h
Engine/include/Input/: HyInput.h  HyInputKeys.h  HyInputMap.h  IHyController.h
Engine/include/Memory/: HyMemoryHeap.h
Engine/include/Networking/: HyNetworking.h  IHyNetworkClass.h  IHyNetworking.h
Engine/include/Renderer/: IHyRenderer.h
Engine/include/Scene/: HyScene.h
Engine/include/Threading/: IHyThreadClass.h
Engine/include/Time/: HyTime.h
Engine/include/UI/: HyUiContainer.h  IHyEntityUi.h
Engine/include/Utilities/: HyIO.h  HyJson.h  HyLocomotion.h  HyMain.h  HyMath.h  HyRand.h  HyStorage.h
Engine/include/Window/: HyWindow.h  HyWindowManager.h
Engine/include/glad/: glad.h
Engine/include/glm/: v0.9.9.8.txt
Engine/src/: HyEngine.cpp
src/Editor/: CMakeLists.txt  HyEditor.vcxproj  HyEditor.vcxproj.filters  MainWindow.cpp  MainWindow.h  VersionPatcher.cpp  VersionPatcher.h
(+2944 files in other folders)
